# slack-notification-crate

./: Cargo.toml
src/: config.rs  lib.rs  send.rs
