[package]
name = "slack-notification"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
log = { version = "0.4.25", features = ["kv_serde"] }
reqwest = { version = "0.12.19", features = ['json'] }
serde = { version = "1.0.219", features = ['derive'] }
thiserror = "2.0.12"
